# bytecodeinterpreter

./: BytecodeInterpreter.cpp  BytecodeInterpreter.hpp  CMakeLists.txt  EquivalentCode.txt  Instruction.cpp  Instruction.hpp  main.cpp
